# smaldog

./: CMakeLists.txt  README.md  package.xml  setup.py
doc/: control_board.md  foot_sensors.md  nuc.md  wire_protocol.md
doc/controllers/: README.md
include/smaldog/: driver.h  robot_state.h  trajectory_sampler.h
include/smaldog/drivers/: driver.h  trajectory_sampler.h
include/smaldog/kinematics/: kinematics_solver.h  leg_fk_solver.h  leg_ik_solver.h  odometry.h
include/smaldog/planners/: classical_crawl.h  planner.h
include/smaldog/stability/: cog_trajectory.h  fast_quad_shift.h  visualization.h
launch/: local_test.launch  local_test.launch.py  robot.launch  robot.launch.py  smaldog.rviz
msg/: State.msg
nodes/: smaldog_ros.py
scripts/: go_neutrals.py  in_place_motion.py  stand_up.py
scripts/analysis/: area_coverage.py  stability_pylab.py
src/: driver.cpp  loopback.cpp  trajectory_sampler.cpp  walk_controller.cpp
src/smaldog/: ax12.py  eth_bridge.py  gaits.py  geometry.py  ik.py  interpolation.py  leg_ik.py  robot_defs.py  smaldog_ros.py  utilities.py
src/smaldog/controllers/: muybridge.py
src/smaldog/visualization/: stability.py
test/: CMakeLists.txt  test_kinematics_solver.cpp  test_leg_fk_solver.cpp  test_leg_ik_solver.cpp
test/python/: test_geometry.py  test_leg_ik.py
tests/: test_ik.py  test_leg_ik.py  test_robot_defs.py  test_utilities.py
urdf/: smaldog.urdf  urdf.launch
