<package>
  <name>smaldog</name>
  <version>0.1.0</version>
  <description>
    SMALdog code.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
