<package format="3">
  <name>smaldog</name>
  <version>0.1.0</version>
  <description>
    SMALdog code.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend> 

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
